# Real-Time-Metrics

./: Cargo.toml  README.md
native-core/: math_stats.cpp
sdk-go/: README.md  main.go
sdk-go/metrics/: metrics.go
sdk-python/: main.py
src/: processor.cpp
src/animation/: signal-filter.ts  transitions.ts
src/animations/: frame-manager.ts  fx-coordinator.ts  vibration-engine.ts
src/common/: metrics.rs  mod.rs
src/engine/: mod.rs  native.rs
src/ingestion/: grpc.rs  mod.rs  udp.rs
src/storage/: mod.rs  sink.rs
