[package]
name = "rust-metrics"
version = "0.1.0"
edition = "2021"
authors = ["Seu Nome <seuemail@exemplo.com>"]
description = "Ultra-high performance telemetry engine with SIMD and Lock-free structures."

[dependencies]
# --- Core & Async ---
# O runtime assíncrono padrão para lidar com milhares de conexões
tokio = { version = "1.36", features = ["full"] }

# --- Networking & gRPC ---
# Tonic é a implementação de gRPC mais rápida em Rust
tonic = "0.11"
prost = "0.12"

# --- Performance & Concurrency ---
# Processamento paralelo de dados (usado na Engine)
rayon = "1.9"
# Estruturas de dados atômicas e Lock-free (usado na Ingestion)
crossbeam = "0.8"
# Alocador de memória de alta performance (evita fragmentação)
jemallocator = "0.5"

# --- Serialization (Zero-Copy) ---
# Serde para JSON/YAML e rkyv para performance extrema sem cópia de memória
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.7", features = ["validation"] }

# --- Observability ---
# Sistema de logs e rastreamento de latência
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
# Necessário para compilar o arquivo .proto em código Rust
tonic-build = "0.11"

[dev-dependencies]
# Para medir a performance e garantir que não houve regressão
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
# Configurações para performance Máxima
opt-level = 3           # Otimização máxima
lto = true              # Link-Time Optimization (gera binário menor e mais rápido)
codegen-units = 1       # Melhora as otimizações ao custo de um build mais lento
panic = "abort"         # Remove overhead de stack unwinding
